--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"sass": "^1.64.1"
 	},
 	"type": "module"
 }
