--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"sass": "^1.64.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-feather-icons": "^4.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
