--- a/app/package.json
+++ b/app/package.json
@@ -1,37 +1,40 @@
 {
-	"name": "sveltearacardi",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
-	},
-	"prisma": {
-		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-	},
-	"devDependencies": {
-		"@faker-js/faker": "^7.6.0",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.22.6",
-		"@typescript-eslint/eslint-plugin": "^5.62.0",
-		"@typescript-eslint/parser": "^5.62.0",
-		"eslint": "^8.47.0",
-		"eslint-plugin-svelte": "^2.32.4",
-		"prisma": "^5.1.1",
-		"sass": "^1.66.1",
-		"svelte": "^4.2.0",
-		"svelte-check": "^3.5.0",
-		"svelte-feather-icons": "^4.0.1",
-		"tslib": "^2.6.2",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.9"
-	},
-	"type": "module",
-	"dependencies": {
-		"@prisma/client": "^5.1.1"
-	}
+    "name": "sveltearacardi",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "eslint ."
+    },
+    "prisma": {
+        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    },
+    "devDependencies": {
+        "@eslint/compat": "^1.2.5",
+        "@eslint/js": "^9.18.0",
+        "@iconify-json/carbon": "^1.1.37",
+        "@stylistic/eslint-plugin-js": "^1.8.1",
+        "@sveltejs/adapter-auto": "^4.0.0",
+        "@sveltejs/adapter-static": "^3.0.8",
+        "@sveltejs/kit": "^2.16.0",
+        "@sveltejs/vite-plugin-svelte": "^5.0.0",
+        "@types/node": "^22.10.1",
+        "eslint": "^9.18.0",
+        "eslint-plugin-svelte": "^2.46.1",
+        "globals": "^15.14.0",
+        "jiti": "^2.4.2",
+        "nanoid": "^5.0.9",
+        "sass-embedded": "^1.83.1",
+        "svelte": "^5.17.1",
+        "svelte-check": "^4.1.3",
+        "typescript": "^5.7.3",
+        "typescript-eslint": "^8.20.0",
+        "unplugin-icons": "^0.21.0",
+        "vite": "^6.0.7"
+    },
+    "type": "module"
 }
