--- a/app/package.json
+++ b/app/package.json
@@ -36,5 +36,8 @@
         "unplugin-icons": "^0.21.0",
         "vite": "^6.0.7"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "sharp": "^0.33.5"
+    }
 }
