--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-src/assets
+src/assets/addons
+src/assets/cards
+old
